[gd_scene load_steps=7 format=4 uid="uid://q6rcqnftg2g8"]

[ext_resource type="Script" path="res://scenes/game/node.gd" id="1_xk3sj"]
[ext_resource type="Texture2D" uid="uid://wad4tf3kekvu" path="res://assets/map/background.png" id="2_50voc"]
[ext_resource type="Texture2D" uid="uid://dh66ac3lqpiko" path="res://assets/map/Terrain (16x16).png" id="3_kdpyv"]
[ext_resource type="AudioStream" uid="uid://0hao7yg3fqm5" path="res://assets/sounds/click.mp3" id="4_bhoiw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rstri"]
texture = ExtResource("3_kdpyv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_opggm"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rstri")

[node name="game" type="Node"]
script = ExtResource("1_xk3sj")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_50voc")
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAACABQAAAAHAAQAAAADABQAAAAHAAQAAAAEABQAAAAHAAQAAAAFABQAAAAHAAQAAAAGABQAAAAHAAQAAAAHABQAAAAHAAQAAAAIABQAAAAHAAQAAAAJABQAAAAHAAQAAAAKABQAAAAHAAQAAAALABQAAAAHAAQAAAAMABQAAAAHAAQAAAANABQAAAAHAAQAAAAOABQAAAAHAAQAAAAPABQAAAAHAAQAAAAQABQAAAAHAAQAAAARABQAAAAHAAQAAAASABQAAAAHAAQAAAATABQAAAAHAAQAAAAUABQAAAAHAAQAAAAVABQAAAAHAAQAAAAWABQAAAAHAAQAAAAXABQAAAAHAAQAAAAYABQAAAAHAAQAAAAZABQAAAAHAAQAAAAaABQAAAAHAAQAAAAbABQAAAAHAAQAAAAcABQAAAAHAAQAAAAdABQAAAAHAAQAAAAeABQAAAAHAAQAAAAfABQAAAAHAAQAAAAgABQAAAAHAAQAAAAhABQAAAAHAAQAAAAiABQAAAAHAAQAAAAjABQAAAAHAAQAAAAkABMAAAAGAAUAAAAkABIAAAAGAAUAAAAkABEAAAAGAAUAAAAkABAAAAAGAAUAAAAkAA8AAAAGAAUAAAAkAA4AAAAGAAUAAAAkAA0AAAAGAAUAAAAkAAwAAAAGAAUAAAAkAAsAAAAGAAUAAAAkAAoAAAAGAAUAAAAkAAkAAAAGAAUAAAAkAAgAAAAGAAUAAAAkAAcAAAAGAAUAAAAkAAYAAAAGAAUAAAAkAAUAAAAGAAUAAAAkAAQAAAAGAAUAAAAkAAMAAAAGAAUAAAAkAAIAAAAGAAUAAAAkAAEAAAAGAAUAAAAkAAAAAAAGAAUAAAAjAP//AAAHAAYAAAAiAP//AAAHAAYAAAAhAP//AAAHAAYAAAAgAP//AAAHAAYAAAAfAP//AAAHAAYAAAAeAP//AAAHAAYAAAAdAP//AAAHAAYAAAAcAP//AAAHAAYAAAAbAP//AAAHAAYAAAAaAP//AAAHAAYAAAAZAP//AAAHAAYAAAAYAP//AAAHAAYAAAAXAP//AAAHAAYAAAAWAP//AAAHAAYAAAAVAP//AAAHAAYAAAAUAP//AAAHAAYAAAATAP//AAAHAAYAAAASAP//AAAHAAYAAAARAP//AAAHAAYAAAAQAP//AAAHAAYAAAAPAP//AAAHAAYAAAAOAP//AAAHAAYAAAANAP//AAAHAAYAAAAMAP//AAAHAAYAAAALAP//AAAHAAYAAAAKAP//AAAHAAYAAAAJAP//AAAHAAYAAAAIAP//AAAHAAYAAAAHAP//AAAHAAYAAAAGAP//AAAHAAYAAAAFAP//AAAHAAYAAAAEAP//AAAHAAYAAAADAP//AAAHAAYAAAACAP//AAAHAAYAAAABAP//AAAHAAYAAAAAAP//AAAHAAYAAAD//wAAAAAIAAUAAAD//wEAAAAIAAUAAAD//wIAAAAIAAUAAAD//wMAAAAIAAUAAAD//wQAAAAIAAUAAAD//wUAAAAIAAUAAAD//wYAAAAIAAUAAAD//wcAAAAIAAUAAAD//wgAAAAIAAUAAAD//wkAAAAIAAUAAAD//woAAAAIAAUAAAD//wsAAAAIAAUAAAD//wwAAAAIAAUAAAD//w0AAAAIAAUAAAD//w4AAAAIAAUAAAD//w8AAAAIAAUAAAD//xAAAAAIAAUAAAD//xEAAAAIAAUAAAD//xIAAAAIAAUAAAD//xMAAAAIAAUAAAABABQAAAAHAAQAAAAAABQAAAAHAAQAAAAAAAsAAAAHAAQAAAABAAsAAAAIAAQAAAABAAwAAAAIAAUAAAABAA0AAAAIAAUAAAABAA4AAAAIAAUAAAABAA8AAAAIAAUAAAABABAAAAAIAAUAAAABABEAAAAIAAUAAAABABIAAAAIAAUAAAABABMAAAAIAAUAAAALABMAAAAGAAQAAAAMABIAAAAGAAQAAAANABEAAAAGAAQAAAAOABAAAAAGAAQAAAAPABAAAAAHAAQAAAAQABAAAAAHAAQAAAARABAAAAAIAAQAAAASABEAAAAIAAQAAAATABIAAAAIAAQAAAAUABMAAAAIAAQAAAARABMAAAAHAAUAAAARABIAAAAHAAUAAAAQABIAAAAHAAUAAAAQABEAAAAHAAUAAAAPABEAAAAHAAUAAAAPABIAAAAHAAUAAAAOABEAAAAHAAUAAAARABEAAAAHAAUAAAASABIAAAAHAAUAAAASABMAAAAHAAUAAAATABMAAAAHAAUAAAAOABIAAAAHAAUAAAAOABMAAAAHAAUAAAANABMAAAAHAAUAAAANABIAAAAHAAUAAAAQABMAAAAHAAUAAAAUAAoAAAAJAAQAAAAUAAsAAAAJAAUAAAAYAAoAAAAKAAQAAAAYAAsAAAAKAAUAAAAVAAoAAAAHAAQAAAAWAAoAAAAHAAQAAAAXAAoAAAAHAAQAAAAXAAsAAAAHAAYAAAAWAAsAAAAHAAYAAAAVAAsAAAAHAAYAAAAfAAwAAAAGAAQAAAAfAA0AAAAGAAUAAAAfAA4AAAAGAAUAAAAfAA8AAAAGAAUAAAAfABAAAAAGAAUAAAAfABEAAAAGAAUAAAAfABIAAAAGAAUAAAAfABMAAAAGAAUAAAAgAAwAAAAHAAQAAAAhAAwAAAAHAAQAAAAiAAwAAAAHAAQAAAAjAAwAAAAHAAQAAAAgAA8AAAAHAAUAAAAgABAAAAAHAAUAAAAgABEAAAAHAAUAAAAhAA4AAAAHAAUAAAAiAA4AAAAHAAUAAAAiAA0AAAAHAAUAAAAiAA8AAAAHAAUAAAAiABAAAAAHAAUAAAAiABEAAAAHAAUAAAAiABIAAAAHAAUAAAAiABMAAAAHAAUAAAAhABMAAAAHAAUAAAAgABMAAAAHAAUAAAAjABMAAAAHAAUAAAAjABIAAAAHAAUAAAAjABEAAAAHAAUAAAAjABAAAAAHAAUAAAAjAA8AAAAHAAUAAAAjAA4AAAAHAAUAAAAhAA0AAAAHAAUAAAAhABEAAAAHAAUAAAAhABIAAAAHAAUAAAAjAA0AAAAHAAUAAAAPABMAAAAHAAUAAAA=")
tile_set = SubResource("TileSet_opggm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Multiplayer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.325
offset_right = 89.0
offset_bottom = 103.0

[node name="Label" type="Label" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer 
"

[node name="Host" type="Button" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Host

"

[node name="Join" type="Button" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Join

"

[node name="sound_click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bhoiw")

[node name="Exit" type="Button" parent="."]
offset_left = 1087.0
offset_top = 8.0
offset_right = 1142.0
offset_bottom = 39.0
text = "Exit
"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/game/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Join" to="." method="_on_client_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
